Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-50336

Screen is not resized after rotation on Windows Phone 10

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.6.1
    • 5.6.0 Beta
    • GUI: Painting
    • None
    • Lumia 950
    • WinRT
    • 1929e48bba631465c256265a2ed31128e7217aca

    Description

      The screen is not resized after rotation on Windows Phone 10. When the screen is touched after rotation then it correctly resizes.

      Attachments

        For Gerrit Dashboard: QTBUG-50336
        # Subject Branch Project Status CR V

        Activity

          People

            mkalinow Maurice Kalinowski
            DanielSt Peter Staab
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes